--- a/openair3/S1AP/MESSAGES/CMakeLists.txt
+++ b/openair3/S1AP/MESSAGES/CMakeLists.txt
@@ -1,3 +1,4 @@
+# include(/home/devcontainers/OAI-for-UAV/openairinterface5g/cmake_targets/macros.cmake)
 set(S1AP_VERSION 15 6 0)
 make_version(S1AP_cc ${S1AP_VERSION})
 #add_definitions(-DS1AP_VERSION=${S1AP_cc})
